# jdksavdecc-c

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  COPYRIGHT  README.md  biicode.conf  common.cmake  format  jdksavdecc.pro  magic.mk  make_avrlib.sh  mkdocs.sh  project.mk
docs-dev/: Doxyfile  footer.html  header.html  struct-list.txt
include/: jdksavdecc.h  jdksavdecc_acmp.h  jdksavdecc_acmp_controller.h  jdksavdecc_acmp_conversation_tester.h  jdksavdecc_acmp_listener.h  jdksavdecc_acmp_manager.h  jdksavdecc_acmp_print.h  jdksavdecc_acmp_talker.h  jdksavdecc_adp.h  jdksavdecc_adp_advertise.h  jdksavdecc_adp_advertising_entity.h  jdksavdecc_adp_advertising_interface.h  jdksavdecc_adp_discover.h  jdksavdecc_adp_manager.h  jdksavdecc_adp_print.h  jdksavdecc_aecp.h  jdksavdecc_aecp_aa.h  jdksavdecc_aecp_aem.h  jdksavdecc_aecp_avc.h  jdksavdecc_aecp_hdcp_apm.h  jdksavdecc_aecp_print.h  jdksavdecc_aecp_vendor.h  jdksavdecc_aem_command.h  jdksavdecc_aem_descriptor.h  jdksavdecc_aem_entity.h  jdksavdecc_aem_print.h  jdksavdecc_allocator.h  jdksavdecc_apc.h  jdksavdecc_app.h  jdksavdecc_app_aps_manager.h  jdksavdecc_app_print.h  jdksavdecc_aps.h  jdksavdecc_arduino.h  jdksavdecc_avr.h  jdksavdecc_command_dispatch.h  jdksavdecc_command_dispatch_print.h  jdksavdecc_control.h  jdksavdecc_control_value.h  jdksavdecc_controller_manager.h  jdksavdecc_descriptor_dispatch.h  (+31 more)
include/test/: jdksavdecc_test_descriptor_storage.h
jdksavdecc-c.xcodeproj/: project.pbxproj
jdksavdecc-c.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
jdksavdecc-c.xcodeproj/project.xcworkspace/xcshareddata/: jdksavdecc-c.xccheckout
jdksavdecc-c.xcodeproj/project.xcworkspace/xcuserdata/jeffk.xcuserdatad/: UserInterfaceState.xcuserstate
jdksavdecc-c.xcodeproj/xcuserdata/jeffk.xcuserdatad/xcschemes/: jdksavdecc-c.xcscheme  xcschememanagement.plist
src/: jdksavdecc.c  jdksavdecc_acmp.c  jdksavdecc_acmp_controller.c  jdksavdecc_acmp_conversation_tester.c  jdksavdecc_acmp_listener.c  jdksavdecc_acmp_manager.c  jdksavdecc_acmp_print.c  jdksavdecc_acmp_talker.c  jdksavdecc_adp.c  jdksavdecc_adp_advertise.c  jdksavdecc_adp_advertising_entity.c  jdksavdecc_adp_advertising_interface.c  jdksavdecc_adp_discover.c  jdksavdecc_adp_manager.c  jdksavdecc_adp_print.c  jdksavdecc_aecp.c  jdksavdecc_aecp_aa.c  jdksavdecc_aecp_aem.c  jdksavdecc_aecp_avc.c  jdksavdecc_aecp_hdcp_apm.c  jdksavdecc_aecp_print.c  jdksavdecc_aecp_vendor.c  jdksavdecc_aem_command.c  jdksavdecc_aem_descriptor.c  jdksavdecc_aem_entity.c  jdksavdecc_aem_print.c  jdksavdecc_allocator.c  jdksavdecc_apc.c  jdksavdecc_app.c  jdksavdecc_app_apc_manager.c  jdksavdecc_app_aps_manager.c  jdksavdecc_app_print.c  jdksavdecc_aps.c  jdksavdecc_arduino.cpp  jdksavdecc_command_dispatch.c  jdksavdecc_command_dispatch_print.c  jdksavdecc_control.c  jdksavdecc_control_value.c  jdksavdecc_controller_manager.c  jdksavdecc_descriptor_dispatch.c  (+28 more)
src/test/: jdksavdecc_test_descriptor_storage.c
tests/: test_aem.c  test_entity.c  test_jdksavdecc_acmp_controller.c  test_jdksavdecc_acmp_conversations.c  test_jdksavdecc_acmp_listener.c  test_jdksavdecc_acmp_talker.c  test_jdksavdecc_adp_advertise.c  test_jdksavdecc_adp_discover.c  test_jdksavdecc_aecp.c  test_jdksavdecc_aem_entity.c  test_jdksavdecc_apc.c  test_jdksavdecc_aps.c  test_jdksavdecc_command_dispatch.c  test_jdksavdecc_descriptor_dispatch.c  test_jdksavdecc_descriptor_storage.c  test_jdksavdecc_maap.c  test_jdksavdecc_pdu.c  test_jdksavdecc_pdu_dispatch.c  test_jdksavdecc_util.c  test_storage.c
tools-dev/: jdksavdecc-tool-print-pdu.c
vs/jdksavdecc-c/: jdksavdecc-c.sln
vs/jdksavdecc-c/jdksavdecc-c-win/: jdksavdecc-c-win.vcxproj  jdksavdecc-c-win.vcxproj.filters
vs2012/: jdksavdecc.sln  jdksavdecc.vcxproj  jdksavdecc.vcxproj.filters
vs2013/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  jdksavdecc-c.sln  jdksavdecc-c.vcxproj  jdksavdecc-c.vcxproj.filters
xcode/jdksavdecc.xcodeproj/: project.pbxproj
xcode/jdksavdecc.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
